# Loan

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Kechita_env_template.txt  README.md  REPLIT.md  SETUP_GUIDE.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  sample_loan_data.csv  start_all.sh  start_production.sh
backend/: ai_service.py  credit_scoring.py  data_generator.py  database.py  init_db.py  main.py  requirements.txt  serve_production.py  settings_service.py
backend/bots/: __init__.py  telegram_bot.py  whatsapp_bot.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  AppWithRouter.jsx  index.css  kechitaBrand.js  main.jsx
frontend/src/components/: Messaging.jsx  Settings.jsx
frontend/src/pages/: Analytics.jsx  Branches.jsx  CreditScoring.jsx  Customers.jsx  Loans.jsx  Overview.jsx  Reports.jsx
